--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         <div class="col-sm-4">
           <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-            <div class="card-header">Tugas 1</div>
+            <div class="card-header">FIngerprint</div>
             <div class="card-body">
-              <h5 class="card-title">Tugas 1</h5>
+              <h5 class="card-title">FIngerprint</h5>
               <p class="card-text">FingerPrint</p> 
-              <a href="tugas1/index.html">
+              <a href="fingerprint/index.html">
               	<button type="button" class="btn btn-light" style="width: 100%;">Preview</button>
               </a>
             </div>
