--- a/fingerprint/index.html
+++ b/fingerprint/index.html
@@ -11,17 +11,24 @@
   </head>
   <body>
     <h1> M Arif Pria A / L200160043</h1>
-    <p>
-            File <img src="/fingerprint/sitiknew1.jpeg" alt="">
-        </p>
-        <p>
-            Gabor <img src="/fingerprint/sitiknew1_enhanced.gif" alt="">
-        </p>
-        <p>
-            Thining <img src="/fingerprint/sitiknew1_enhanced_thinned.gif" alt="">
-        </p>
-        <p>
-            Extract Minutiae <img src="/fingerprint/sitiknew1_enhanced_thinned_minutiae.gif" alt="">
-        </p>
+    <table>
+      <tr>
+        <td>File</td>
+        <td>Gabor</td>
+        <td>Thining</td>
+        <td>Extract Minutiae </td>
+      </tr>
+      <tr>
+        <td><img src="/fingerprint/sitiknew1.jpeg" alt=""></td>
+        <td><img src="/fingerprint/sitiknew1_enhanced.gif" alt=""></td>
+        <td><img src="/fingerprint/sitiknew1_enhanced_thinned.gif" alt=""></td>
+        <td><img src="/fingerprint/sitiknew1_enhanced_thinned_minutiae.gif" alt=""></td>
+      </tr>
+      <tr>
+        <td>Foto fingerprint yang di scan</td>
+        <td>Proses Gabor yaitu proses yang membedakan garis putih dan hitam ,menebalkan garis hitam dan memudarkan garis putih</td>
+        <td>Menipiskan garis hitam hingga 1Px</td>
+        <td>Membuat minutea disetiap ujung garis</td>
+      </tr>
   </body>
 </html>
